# practice

./: CMake.md  CMakeLists.txt  README.md  Source1.cpp  Source2.cpp  Source3.cpp  Source4.cpp  Source5.cpp  pch.md  plan&report.md  stdafx.h  table.md  test.cpp  test.sln  test.vcxproj  test.vcxproj.filters  test1.vcxproj  test1.vcxproj.filters  with_pch_1.cpp  with_pch_2.cpp  with_pch_3.cpp  with_pch_5cpp.vcxproj  with_pch_5cpp.vcxproj.filters  without_pch.sln  Новый текстовый документ.txt  Отчёт pch.md
with/: qwerty.md
with_5cpp/: readme.md
with_pch/: Source1.cpp  Source2.cpp  Source3.cpp  Source4.cpp  Source5.cpp  stdafx.h  with_pch_5cpp.sln  with_pch_5cpp.vcxproj  with_pch_5cpp.vcxproj.filters  Отчёт pch
without_pch/: CMakeLists.txt  Source1.cpp  Source2.cpp  Source3.cpp  Source4.cpp  Source5.cpp  test1.vcxproj  test1.vcxproj.filters
